# aoc2019

./: stack.yaml
hs/: Day1.hs  Day2.hs  Day3.hs  Day4.hs  LICENSE  Main.hs  aoc2019.cabal
