name:                aoc2019
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Erik Lee
maintainer:          eriklee113@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
  other-modules:
  -- other-extensions:
  build-depends:       base >=4.12 && <4.13
  --hs-source-dirs:    .
  default-language:    Haskell2010

executable aoc2019
  main-is:             Main.hs
  other-modules: 
      Day1
    , Day2
    , Day3
    , Day4
  -- other-extensions:
  ghc-options: -Wall -O2
  build-depends:       base >=4.12 && <4.13
                     , aoc2019
                     , containers
                     , split
                     , parsec
  -- hs-source-dirs:
  default-language:    Haskell2010
